# finsight-ai

./: .gitignore  LICENSE  pyproject.toml
ingestion/: scheduler.py  storage.py
ingestion/sources/: yahoo.py
