[tool.poetry]
name = "finsight-ai"
version = "0.1.0"
description = "Agentic RAG system for financial intelligence"
authors = ["Poojanjali"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

# Web framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"

# Data ingestion
yfinance = "^0.2.40"
aiohttp = "^3.9.5"
feedparser = "^6.0.11"
praw = "^7.7.1"
newsapi-python = "^0.2.7"

# ML / NLP
torch = "^2.3.0"
transformers = "^4.41.0"
sentence-transformers = "^3.0.0"
vaderSentiment = "^3.3.2"
ta = "^0.11.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["asyncio"], version = "^5.0.4"}
pgvector = "^0.2.5"

# LLM
anthropic = "^0.28.0"

# Scheduling
apscheduler = "^3.10.4"

# Utils
pydantic = "^2.7.1"
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
httpx = "^0.27.0"
tenacity = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"